# llments

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  README.md  index_1.sh  index_10.sh  index_2.sh  index_3.sh  index_4.sh  index_5.sh  index_6.sh  index_7.sh  index_8.sh  index_9.sh  index_code_1.py  index_code_10.py  index_code_2.py  index_code_3.py  index_code_4.py  index_code_5.py  index_code_6.py  index_code_7.py  index_code_8.py  index_code_9.py  jupyter.err  jupyter_gpu.err  jupyter_gpu2.err  jupyter_job.sh  jupyter_job_gpu.sh  jupyter_job_gpu_1.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
doc/: README.md
examples/bias_monkey/: README.md  bias_monkey.ipynb  bias_monkey_extra_results.ipynb  bias_monkey_gpt2_results.ipynb  bias_monkey_utils.py  requirements.txt
examples/community_lm/: .gitignore  README.md  community_lm.ipynb  community_lm_constants.py  community_lm_factuality_responses.ipynb  community_lm_rag.ipynb  community_lm_utils.py  download_data.sh  generate_community_opinion.py  requirements.txt
examples/detoxification_bias/: Detoxify_LM_demo.ipynb  README.md  replication.ipynb  requirements.txt
examples/detoxification_bias/eval_results_Llama2-7b/: checkpoint-0.txt  checkpoint-10000.txt  checkpoint-12500.txt  checkpoint-15000.txt  checkpoint-17500.txt  (+5 more)
examples/factscore/: community_lm_factuality_analysis.ipynb
examples/factscore_eval/: README.md  community_lm_factuality_analysis.ipynb  community_lm_factuality_responses.ipynb  communitylm_analysis.ipynb  requirements.txt  results_replication.ipynb
examples/llm_fair_eval/: FairEval.ipynb  README.md  fair_eval_community_LMs.ipynb  requirements.txt
examples/rag/: NQ_example.ipynb  collection.jsonl  nq_example.ipynb  rag_example.ipynb  requirements.txt
llments/: __init__.py  version.py
llments/datastore/: datastore.py  pyserini_datastore.py
llments/distance/: distance.py  norm.py
llments/distmod/: distmod.py  ensemble.py  filter_modifier.py  fit_modifier.py  prompt_modifier.py  reinforcement_learning.py  retrieval_augmented_generation.py
llments/eval/: __init__.py  eval.py  rag.py  sentiment.py  toxicity.py
llments/filter/: filter.py
llments/lm/: __init__.py  api_lm.py  distmod.py  empirical.py  ensemble.py  filtered.py  fit.py  hugging_face.py  lm.py  lm_loader.py  lm_loader_test.py  loader_test.py  prompted.py  rag.py  rl.py
(+38 files in other folders)
