[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llments"
authors = [
    {name = "Graham Neubig", email = "neubig@gmail.com"},
]
description = "llments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit"
]

[tool.setuptools.dynamic]
version = {attr = "llments.version.VERSION"}
