[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llments"
version = "0.0.1"
authors = [
    {name = "Graham Neubig", email = "neubig@gmail.com"},
]
description = "llments"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit"
]

[project.urls]
repository = "https://github.com/neulab/llments"

[project.scripts]
llments-cli = "llments:main"