[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llments"
authors = [
    {name = "Graham Neubig", email = "neubig@gmail.com"},
]
description = "llments"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas",
    "tqdm",
    "litellm",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit"
]

[project.urls]
repository = "https://github.com/neulab/llments"

[tool.hatch.version]
path = "llments/version.py"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["D103", "D200", "D212"]
